Upgrade to Java SE 11. Fix compiler errors this caused.