@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.dungeondiver4.dungeon.abc;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.BitSet;
 
 import com.puttysoftware.dungeondiver4.DungeonDiver4;
@@ -239,7 +240,7 @@ public abstract class AbstractDungeonObject extends CloneableObject
     @Override
     public AbstractDungeonObject clone() {
         try {
-            final AbstractDungeonObject copy = this.getClass().newInstance();
+            final AbstractDungeonObject copy = this.getClass().getConstructor().newInstance();
             copy.sp = this.sp.clone();
             copy.pushable = this.pushable;
             copy.pushableInto = this.pushableInto;
@@ -264,10 +265,9 @@ public abstract class AbstractDungeonObject extends CloneableObject
                 copy.ruleSet = this.ruleSet.clone();
             }
             return copy;
-        } catch (final InstantiationException e) {
-            DungeonDiver4.getErrorLogger().logError(e);
-            return null;
-        } catch (final IllegalAccessException e) {
+        } catch (final InstantiationException | IllegalAccessException
+                | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException e) {
             DungeonDiver4.getErrorLogger().logError(e);
             return null;
         }
