@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.fantastlex.maze.utilities;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import com.puttysoftware.fantastlex.FantastleX;
@@ -964,11 +965,11 @@ public class MazeObjectList {
                 if (instance.isOfType(TypeConstants.TYPE_GENERATED)) {
                     return instance.clone();
                 } else {
-                    return instance.getClass().newInstance();
+                    return instance.getClass().getConstructor().newInstance();
                 }
-            } catch (final IllegalAccessException iae) {
-                return null;
-            } catch (final InstantiationException ie) {
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
                 return null;
             }
         }
@@ -991,7 +992,7 @@ public class MazeObjectList {
                 if (object.isOfType(TypeConstants.TYPE_GENERATED)) {
                     instance = object.clone();
                 } else {
-                    instance = object.getClass().newInstance();
+                    instance = object.getClass().getConstructor().newInstance();
                 }
                 if (formatVersion == FormatConstants.MAZE_FORMAT_1) {
                     o = instance.readMazeObjectV1(reader, UID);
@@ -1000,10 +1001,10 @@ public class MazeObjectList {
                         return o;
                     }
                 }
-            } catch (final InstantiationException ex) {
-                FantastleX.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                FantastleX.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                FantastleX.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -1019,7 +1020,7 @@ public class MazeObjectList {
                 if (object.isOfType(TypeConstants.TYPE_GENERATED)) {
                     instance = object.clone();
                 } else {
-                    instance = object.getClass().newInstance();
+                    instance = object.getClass().getConstructor().newInstance();
                 }
                 if (formatVersion == FormatConstants.MAZE_FORMAT_1) {
                     o = instance.readMazeObjectV1(reader, UID);
@@ -1027,10 +1028,10 @@ public class MazeObjectList {
                         return o;
                     }
                 }
-            } catch (final InstantiationException ex) {
-                FantastleX.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                FantastleX.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                FantastleX.getErrorLogger().logError(e);
             }
         }
         return null;
