@@ -7,6 +7,7 @@ package com.puttysoftware.lasertank.arena.abstractobjects;
 
 import java.awt.Color;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.BitSet;
 
 import com.puttysoftware.lasertank.LaserTank;
@@ -103,7 +104,7 @@ public abstract class AbstractArenaObject extends CloneableObject {
     @Override
     public AbstractArenaObject clone() {
         try {
-            final AbstractArenaObject copy = this.getClass().newInstance();
+            final AbstractArenaObject copy = this.getClass().getConstructor().newInstance();
             copy.solid = this.solid;
             copy.pushable = this.pushable;
             copy.friction = this.friction;
@@ -117,10 +118,9 @@ public abstract class AbstractArenaObject extends CloneableObject {
             copy.color = this.color;
             copy.material = this.material;
             return copy;
-        } catch (final InstantiationException e) {
-            LaserTank.getErrorLogger().logError(e);
-            return null;
-        } catch (final IllegalAccessException e) {
+        } catch (final InstantiationException | IllegalAccessException
+                | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException e) {
             LaserTank.getErrorLogger().logError(e);
             return null;
         }
