@@ -6,6 +6,7 @@
 package com.puttysoftware.lasertank.utilities;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 import com.puttysoftware.images.BufferedImageIcon;
 import com.puttysoftware.lasertank.LaserTank;
@@ -217,7 +218,7 @@ public class ArenaObjectList {
         for (final AbstractArenaObject allObject : this.allObjects) {
             try {
                 final AbstractArenaObject instance = allObject.getClass()
-                        .newInstance();
+                        .getConstructor().newInstance();
                 if (FormatConstants
                         .isFormatVersionValidGeneration1(formatVersion)
                         || FormatConstants.isFormatVersionValidGeneration2(
@@ -229,10 +230,10 @@ public class ArenaObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                LaserTank.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LaserTank.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LaserTank.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -250,7 +251,7 @@ public class ArenaObjectList {
         for (final AbstractArenaObject allObject : this.allObjects) {
             try {
                 final AbstractArenaObject instance = allObject.getClass()
-                        .newInstance();
+                        .getConstructor().newInstance();
                 if (FormatConstants
                         .isFormatVersionValidGeneration3(formatVersion)) {
                     o = instance.readArenaObjectG3(reader, UID, formatVersion);
@@ -260,10 +261,10 @@ public class ArenaObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                LaserTank.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LaserTank.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LaserTank.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -281,7 +282,7 @@ public class ArenaObjectList {
         for (final AbstractArenaObject allObject : this.allObjects) {
             try {
                 final AbstractArenaObject instance = allObject.getClass()
-                        .newInstance();
+                        .getConstructor().newInstance();
                 if (FormatConstants
                         .isFormatVersionValidGeneration4(formatVersion)) {
                     o = instance.readArenaObjectG4(reader, UID, formatVersion);
@@ -291,10 +292,10 @@ public class ArenaObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                LaserTank.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LaserTank.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LaserTank.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -312,7 +313,7 @@ public class ArenaObjectList {
         for (final AbstractArenaObject allObject : this.allObjects) {
             try {
                 final AbstractArenaObject instance = allObject.getClass()
-                        .newInstance();
+                        .getConstructor().newInstance();
                 if (FormatConstants
                         .isFormatVersionValidGeneration5(formatVersion)) {
                     o = instance.readArenaObjectG5(reader, UID, formatVersion);
@@ -322,10 +323,10 @@ public class ArenaObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                LaserTank.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LaserTank.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LaserTank.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -343,7 +344,7 @@ public class ArenaObjectList {
         for (final AbstractArenaObject allObject : this.allObjects) {
             try {
                 final AbstractArenaObject instance = allObject.getClass()
-                        .newInstance();
+                        .getConstructor().newInstance();
                 if (FormatConstants
                         .isFormatVersionValidGeneration6(formatVersion)) {
                     o = instance.readArenaObjectG6(reader, UID, formatVersion);
@@ -353,10 +354,10 @@ public class ArenaObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                LaserTank.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LaserTank.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LaserTank.getErrorLogger().logError(e);
             }
         }
         return null;
