@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.loopchute.generic;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import com.puttysoftware.images.BufferedImageIcon;
@@ -637,11 +638,11 @@ public class MazeObjectList {
                 if (instance.isOfType(TypeConstants.TYPE_GENERATED)) {
                     return instance.clone();
                 } else {
-                    return instance.getClass().newInstance();
+                    return instance.getClass().getConstructor().newInstance();
                 }
-            } catch (final IllegalAccessException iae) {
-                return null;
-            } catch (final InstantiationException ie) {
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
                 return null;
             }
         }
@@ -663,7 +664,7 @@ public class MazeObjectList {
                 if (object.isOfType(TypeConstants.TYPE_GENERATED)) {
                     instance = object.clone();
                 } else {
-                    instance = object.getClass().newInstance();
+                    instance = object.getClass().getConstructor().newInstance();
                 }
                 if (formatVersion == FormatConstants.MAZE_FORMAT_1
                         || formatVersion == FormatConstants.MAZE_FORMAT_2
@@ -678,10 +679,10 @@ public class MazeObjectList {
                         return o;
                     }
                 }
-            } catch (final InstantiationException ex) {
-                LoopChute.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                LoopChute.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                LoopChute.getErrorLogger().logError(e);
             }
         }
         return null;
