@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.mastermaze.maze.generic;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import com.puttysoftware.images.BufferedImageIcon;
@@ -958,11 +959,11 @@ public class MazeObjectList {
                 if (instance.isOfType(TypeConstants.TYPE_GENERATED)) {
                     return instance.clone();
                 } else {
-                    return instance.getClass().newInstance();
+                    return instance.getClass().getConstructor().newInstance();
                 }
-            } catch (final IllegalAccessException iae) {
-                return null;
-            } catch (final InstantiationException ie) {
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
                 return null;
             }
         }
@@ -983,7 +984,7 @@ public class MazeObjectList {
                 if (object.isOfType(TypeConstants.TYPE_GENERATED)) {
                     instance = object.clone();
                 } else {
-                    instance = object.getClass().newInstance();
+                    instance = object.getClass().getConstructor().newInstance();
                 }
                 if (formatVersion == FormatConstants.MAZE_FORMAT_1) {
                     o = instance.readMazeObjectV1(reader, UID);
@@ -996,10 +997,10 @@ public class MazeObjectList {
                         return o;
                     }
                 }
-            } catch (final InstantiationException ex) {
-                MasterMaze.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                MasterMaze.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                MasterMaze.getErrorLogger().logError(e);
             }
         }
         return null;
@@ -1015,7 +1016,7 @@ public class MazeObjectList {
                 if (object.isOfType(TypeConstants.TYPE_GENERATED)) {
                     instance = object.clone();
                 } else {
-                    instance = object.getClass().newInstance();
+                    instance = object.getClass().getConstructor().newInstance();
                 }
                 if (formatVersion == FormatConstants.MAZE_FORMAT_1) {
                     o = instance.readMazeObjectV1(reader, UID);
@@ -1023,10 +1024,10 @@ public class MazeObjectList {
                         return o;
                     }
                 }
-            } catch (final InstantiationException ex) {
-                MasterMaze.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                MasterMaze.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                MasterMaze.getErrorLogger().logError(e);
             }
         }
         return null;
