@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.mazer5d.generic;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.BitSet;
 
 import com.puttysoftware.mazer5d.Mazer5D;
@@ -220,7 +221,7 @@ public abstract class MazeObject implements DirectionConstants, TypeConstants,
     @Override
     public MazeObject clone() {
         try {
-            final MazeObject copy = this.getClass().newInstance();
+            final MazeObject copy = this.getClass().getConstructor().newInstance();
             copy.sp = this.sp.clone();
             copy.pushable = this.pushable;
             copy.pushableInto = this.pushableInto;
@@ -242,9 +243,9 @@ public abstract class MazeObject implements DirectionConstants, TypeConstants,
                 copy.ruleSet = this.ruleSet.clone();
             }
             return copy;
-        } catch (final InstantiationException e) {
-            throw new AssertionError("Should not ever get here!");
-        } catch (final IllegalAccessException e) {
+        } catch (final InstantiationException | IllegalAccessException
+                | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException e) {
             throw new AssertionError("Should not ever get here!");
         }
     }
