@@ -6,6 +6,7 @@ Any questions should be directed to the author via email at: products@puttysoftw
 package com.puttysoftware.mazer5d.generic;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 import com.puttysoftware.images.BufferedImageIcon;
 import com.puttysoftware.mazer5d.Mazer5D;
@@ -773,10 +774,10 @@ public class MazeObjectList {
             return null;
         } else {
             try {
-                return instance.getClass().newInstance();
-            } catch (final IllegalAccessException iae) {
-                return null;
-            } catch (final InstantiationException ie) {
+                return instance.getClass().getConstructor().newInstance();
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
                 return null;
             }
         }
@@ -799,7 +800,7 @@ public class MazeObjectList {
         }
         for (final MazeObject allObject : this.allObjects) {
             try {
-                final MazeObject instance = allObject.getClass().newInstance();
+                final MazeObject instance = allObject.getClass().getConstructor().newInstance();
                 if (formatVersion == XMLFormatConstants.XML_MAZE_FORMAT_1) {
                     o = instance.readMazeObjectXML(reader, UID, formatVersion);
                 } else if (formatVersion == XMLFormatConstants.XML_MAZE_FORMAT_2) {
@@ -814,10 +815,10 @@ public class MazeObjectList {
                 if (o != null) {
                     return o;
                 }
-            } catch (final InstantiationException ex) {
-                Mazer5D.getErrorLogger().logError(ex);
-            } catch (final IllegalAccessException ex) {
-                Mazer5D.getErrorLogger().logError(ex);
+            } catch (final InstantiationException | IllegalAccessException
+                    | IllegalArgumentException | InvocationTargetException
+                    | NoSuchMethodException | SecurityException e) {
+                Mazer5D.getErrorLogger().logError(e);
             }
         }
         return null;
